# haskell-katas

./: .gitignore  LICENSE  Makefile  docker-compose.yml  haskell-katas.cabal
src/: HaskellKatas.hs  HaskellKatas11to20.hs  HaskellKatas1to10.hs  Helpers.hs
src-exe/: Main.hs
test/: Katas11to20.hs  Katas1to10.hs  Main.hs  Test.hs
