cabal-version:      3.4
name:               haskell-katas
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Agustin Jimenez
maintainer:         agustin.melomaniac@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HaskellKatas, Helpers
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-katas
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        haskell-katas

    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite haskell-katas-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:
        base ^>=4.16.4.0,
        haskell-katas,
        tasty ^>= 1.5.2,
        tasty-hunit ^>= 0.10.2
