cabal-version:      2.2
name:               haskell-katas
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Agustin Jimenez
maintainer:         agustin.melomaniac@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        HaskellKatas1to10
      , Helpers
      , HaskellKatas11to20
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-katas
  import:           warnings
  main-is:          Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ^>=4.19.1.0
    , haskell-katas
  
  hs-source-dirs:   src-exe
  default-language: Haskell2010

test-suite haskell-katas-test
  import:           warnings
  default-language: Haskell2010
  other-modules:
      Katas1to10
    , Katas11to20
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base ^>=4.19.1.0
    , haskell-katas
    , tasty ^>= 1.5.2
    , tasty-hunit ^>= 0.10.2
